--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                     <img border="0" alt="i.Fest '20'" src="i.Fest_logo_new.png" width="100" height="100" class="center">
                 </a>    
                 <h1 align="center">i.Fest '20 - Housie Ticket Generator</h1>
-                 <h2 align="center">i.Fest '20 - If you get an empty column, refresh the page!</h2>
+                 <h2 align="center">Note - If you get an empty column, refresh the page!</h2>
                  <h3 align="center"><a href="tel:+918980933800" id="newCard" >Take a screenshot of the ticket and WhatsApp it to +91 8980933800 </a></h3>
                  <h3 align="center"><a id="printBut" >Write down the numbers on paper to circle the numbers, and if you win something, take a photo and WhatsApp it to the same number.</a></h3>
         <div class= "header"></div>      
