--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 </a>    
                 <h1 align="center">i.Fest '20 - Housie Ticket Generator</h1>
                  <h2 align="center">Note - If you get an empty column, refresh the page!</h2>
-                 <h3 align="center"><a href="tel:+918980933800" id="newCard" >Take a screenshot of the ticket and WhatsApp it to +91 8980933800 </a></h3>
+                 <h3 align="center"><a href="tel:+919426434197" id="newCard" >Take a screenshot of the ticket and WhatsApp it to +919426434197 (Utsmay Kumar) </a></h3>
                  <h3 align="center"><a id="printBut" >Write down the numbers on paper to circle the numbers, and if you win something, take a photo and WhatsApp it to the same number.</a></h3>
         <div class= "header"></div>      
          
