--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
                 <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
             </head>
             <body>
-                <a href="http://ifest.daiict.ac.in/#home" target="_blank">
-                    <img border="0" alt="i.Fest '20'" src="i.Fest_logo_new.png" width="100" height="100" class="center">
+                <a href="http://synapse.daiict.ac.in/" target="_blank">
+                    <img border="0" alt="i.Fest '20'" src="D2_1.png" width="100" height="100" class="center">
                 </a>    
                 <h1 align="center">i.Fest '20 - Housie Ticket Generator</h1>
                  <h2 align="center">Note - If you get more than one empty column, refresh the page!</h2>
