--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
             </head>
             <body>
                 <a href="http://synapse.daiict.ac.in/" target="_blank">
-                    <img border="0" alt="i.Fest '20'" src="D2_1.png" width="100" height="100" class="center">
+                    <img border="0" alt="i.Fest '20'" src="D2_1.png" class="center">
                 </a>    
-                <h1 align="center">i.Fest '20 - Housie Ticket Generator</h1>
+                <h1 align="center">Synapse'21 - Housie Ticket Generator</h1>
                  <h2 align="center">Note - If you get more than one empty column, refresh the page!</h2>
                  <h3 align="center"><a href="tel:+919426434197" id="newCard" >Take a screenshot of the ticket and WhatsApp it to +919426434197 (Utsmay Kumar) </a></h3>
                  <h3 align="center"><a id="printBut" >Write down the numbers on paper to circle the numbers, and if you win something, take a photo and WhatsApp it to the same number.</a></h3>
