--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             </head>
             <body>
                 <a href="http://synapse.daiict.ac.in/" target="_blank">
-                    <img border="0" alt="i.Fest '20'" src="D2_1.png" class="center">
+                    <img border="0" alt="i.Fest '20'" src="D2_1.png" width="350" height="250" class="center">
                 </a>    
                 <h1 align="center">Synapse'21 - Housie Ticket Generator</h1>
                  <h2 align="center">Note - If you get more than one empty column, refresh the page!</h2>
