--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
                 <script type="text/javascript" src="script.js"></script>
                 <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
             </head>
-            <body>
+            <body bgcolor="grey">
                 <a href="http://synapse.daiict.ac.in/" target="_blank">
                     <img border="0" alt="i.Fest '20'" src="D2_1.png" width="350" height="250" class="center">
                 </a>    
